--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "stress": "node stress-test.js"
   },
   "dependencies": {
-    "ink": "^4.4.1",
-    "react": "^18.2.0",
+    "chalk": "^5.3.0",
+    "ink": "^4.0.0",
     "ink-spinner": "^5.0.0",
-    "chalk": "^5.3.0"
+    "react": "^18.2.0"
   },
   "engines": {
     "node": ">=16"
